--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www", 
-    "devstart": "nodemon --exec babel-node ./bin/www", 
+    "start": "node ./bin/www",
+    "devstart": "nodemon --exec babel-node ./bin/www",
     "serverstart": "DEBUG=members-only:* npm run devstart"
   },
   "dependencies": {
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongoose": "^6.5.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   },
